<resources>
    <string name="app_name">PetEgg</string>
    <string name="backgroundImageTree">background</string>
    <string name="backgroundImageHome">background</string>
    <string name="continueToHomeButton">Continue</string>
    <string name="bouncingEggImage">bouncing_egg</string>
    <string name="petEggImage">pet_egg</string>
    <string name="petegg">PetEgg</string>
    <string name="continueSettings">buttonToSettingsScreen</string>
    <string name="ContinueOutside">continueOutside</string>
    <string name="feedPet">feedPet</string>
    <string name="saveName">Save</string>
    <string name="petNameInput">Name</string>
    <string name="giveName">Give your egg a name!</string>
    <string name="hint">Eggbert</string>
    <string name="autofill">Eggbert</string>
    <string name="nameYourPet">nameOfYourPet</string>
    <string name="activate_developer_menue">Activate Developer Menue</string>
    <string name="back">Back</string>
    <string name="receive_notifications_from_petegg">Receive notifications from PetEgg.</string>
    <string name="health">health</string>
    <string name="change_pet_health">change pet health</string>
    <string name="allow_petegg_to_receive_information_about_current_location">Allow PetEgg to receive information about current location.</string>
    <string name="steps">Steps:</string>
</resources>
