<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <LinearLayout
        android:id="@+id/fullscreenLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/backgroundImageHome"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/home" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="-16dp">


                <TextView
                    android:id="@+id/nameOfPet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameYourPet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.154"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.009" />

                <ImageView
                    android:id="@+id/feedButton"
                    android:layout_width="202dp"
                    android:layout_height="45dp"
                    android:background="@drawable/feedbutton"
                    android:contentDescription="@string/feedPet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.985"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.93"
                    app:srcCompat="@android:drawable/btn_dialog" />

                <ImageView
                    android:id="@+id/doorButton"
                    android:layout_width="42dp"
                    android:layout_height="220dp"
                    android:background="@drawable/doorbutton"
                    android:contentDescription="@string/ContinueOutside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.018"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.761"
                    app:srcCompat="@android:drawable/btn_dialog" />

                <ImageView
                    android:id="@+id/settingsButton"
                    android:layout_width="33dp"
                    android:layout_height="35dp"
                    android:background="@drawable/optionsbutton"
                    android:contentDescription="@string/continueSettings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@android:drawable/btn_dialog" />

                <ImageView
                    android:id="@+id/homescreenEgg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="380dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/petEggImage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.339"
                    app:srcCompat="@drawable/egg_v1" />

                <ImageButton
                    android:id="@+id/TrophyButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="278dp"
                    android:layout_marginTop="81dp"
                    android:layout_marginEnd="53dp"
                    android:layout_marginBottom="256dp"
                    android:background="@drawable/trophybutton"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toTopOf="@+id/homescreenEgg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/trophybutton" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="183dp"
                    android:layout_marginEnd="173dp"
                    android:layout_marginBottom="17dp"
                    app:layout_constraintBottom_toTopOf="@+id/homescreenEgg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/doorButton"
                    app:layout_constraintTop_toBottomOf="@+id/nameOfPet"
                    app:srcCompat="@drawable/window" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>